--- a/index.css
+++ b/index.css
@@ -1,3 +1,90 @@
-#heading {
-  color: red;
+.Header{
+  display: flex;
+  justify-content: space-between;
+  border : 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.logo{
+  width: 100px;
+  height: 100px;
+  margin-right: 10px;
+}
+
+.nav-items > ul{
+  display: flex;
+  list-style-type: none;
+  font-size: 24px;
+
+}
+
+.nav-items > ul > li{
+ padding: 10px;
+ margin: 10px;
+}
+
+.search{
+  padding:  10px;
+}
+
+.res-card{
+  width: 200px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.res-container{
+  display: flex;
+  flex-wrap: wrap;
+ 
+  margin: 20px;
+  gap: 20px;
+
+}
+
+.res-card:hover{
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+
+
+.filter-btn{
+  margin: 10px;
+  cursor: pointer;
+}
+.res-logo {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.shimmer-card{
+  width: 200px;
+  height: 400px;
+  background: #f0f0f0;
+  background-size: 200% 100%;
+ margin: 20px;
+}
+
+.login{
+  padding: 0px 20px;
+  cursor: pointer;
+}
+
+.filter{
+  display: flex;
+}
+
+.search-box{
+  margin: 10px;
 }
